Fix media query overlap and display at 1440px

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ ON MOBILE STYLES
 ===================
 */
 
-@media (min-width: 375px) and (max-width: 1440px) {
+@media (min-width: 375px) and (max-width: 1439px) {
 
     /* HEADER */
   .top-wave-mobile img {
@@ -213,14 +213,14 @@ ON DESKTOP STYLES
    /* intro text block */
 
     .proof-description-block {
-      width: 30%;
+      width: 40%;
       padding: 30px;
-      margin: 100px 0 40px 100px;
+      margin: 100px 0 40px 50px;
     }
 
       .section-title {
         font-size: 48px;
-        margin-left: 60px;
+        margin-left: 50px;
         color: hsl(300, 43%, 22%);
         margin-bottom: 20px;
       }
@@ -240,14 +240,14 @@ ON DESKTOP STYLES
       flex-direction: column;
       width: 50%;
       align-items: center;
-      margin: 150px 0 20px 150px;
+      margin: 150px 0 20px 90px;
       z-index: 999;
     }  
 
       .review {
         background-color: hsl(300, 24%, 96%);
-        width: 50%;
-        padding: 20px 0 20px 10px;
+        width: 60%;
+        padding: 20px 30px 20px 10px;
         margin-bottom: 20px;
         border-radius: 5%;
         color: hsl(300, 43%, 22%);
@@ -259,11 +259,11 @@ ON DESKTOP STYLES
         }
 
       .small-indent-right {
-        margin-right: 100px;
+        margin-right: 150px;
       }
 
       .large-indent-right {
-        margin-right: 200px;
+        margin-right: 300px;
       }
 
   /* testimonial block */
